--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
         </section>
 
         <section class="navbar">
-            <a href="" class="form">Navbar</a>
+            <ul>
+                <li>
+                    <a class="navbar-items" href="./index.html">Home</a>
+                    <a class="navbar-items" href="./index.html">Géneros</a>
+                    <a class="navbar-items" href="./index.html">Favoritos</a>
+                </li>
+            </ul>
         </section>
-
 
         <section class="form">
             <a href="" class="form">Form</a>
