--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Integrador</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://fontawesome.com/712575d4a5.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
 
@@ -16,6 +18,11 @@
 
         <section class="navbar">
             <a href="" class="form">Navbar</a>
+            <div class="buscar" > 
+                <input type="text" placeholder="Buscar" required>
+                <div class="btn" 
+                <i class="fa fa-search"></i> </div>
+             </div>
         </section>
 
 
@@ -32,7 +39,7 @@
     <footer class="footer">
         <ul class="ulfooter">
             <li class="footer-text" href="">Josefina Trezeguet</li>
-            <li class="footer-text" href="">Catalina Scallan</li>
+            <li class="footer-cata" href="">Catalina Scallan</li>
         </ul>
     </footer>
       
