--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 
     <header class="header">
 
-        <section class="logo-sec">
-            <img class="logo-img" src="./img/UdeSA.png" alt="">
-        </section>
+        <div class="logo-sec">
+            <img class="logo-img" src="./img/J&C logo.png" alt="">
+        </div>
 
-        <section class="navbar">
-            <ul>
-                <li>
-                    <a class="navbar-items" href="./index.html">Home</a>
-                    <a class="navbar-items" href="./index.html">Géneros</a>
-                    <a class="navbar-items" href="./index.html">Favoritos</a>
+        <div class="navbar">
+            <ul class="ulnavbar">
+                <li class="navbar-text">
+                    <a class="navbar-items" href="./index.html">HOME</a>
+                    <a class="navbar-items" href="./index.html">GÉNEROS</a>
+                    <a class="navbar-items" href="./index.html">FAVORITOS</a>
                 </li>
             </ul>
-        </section>
-        
+        </div>
 
-        <section class="form">
-            <a href="" class="form">Form</a>
-        </section>
+        <div class="form">
+            <input type="text" placeholder="Buscar...">        
+        </div>
 
     </header>
 
     <main>
+
+        <h2> ... </h2>
 
     </main>
 
