--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
             </ul>
         </div>
 
-        <div class="form">
-            <input type="text" placeholder="Buscar...">        
-        </div>
+    
+    <form class="contenedorPadre" action="./busqueda.html" method="get">
+    <div class="contenedor.input">
+        <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
+    </div>
+
+    <div class="contenedor.input">
+        <button type="submit">Submit</button>
+    </div>
+    </form>
 
     </header>
 
