header hecho y páginas de detalles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
 
         <div class="logo-sec">
-            <img class="logo-img" src="./img/J&C logo.png" alt="">
+            <img class="logo-img" src="./img/LogoJC.png" alt="">
         </div>
 
         <div class="navbar">
@@ -37,10 +37,108 @@
 
     </header>
 
-    <main>
+    <main class="main">
 
-        <h2> ... </h2>
+        <h1 class="titulo">LO MÁS VISTO EN PELÍCULAS</h1>
+        <section class="portada-sec">
 
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/bellaybestia.jpg" alt=""></a>
+                <h2>Beauty and the Beast</h2>
+                <p>Estreno: 2017</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/amigos.jpg" alt=""></a>
+                <h2>Friends with benefits</h2>
+                <p>Estreno: 2011</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/diezcosas.jpg" alt=""></a>
+                <h2>Ten things I hate about you</h2>
+                <p>Estreno: 1999</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/et.jpg" alt=""></a>
+                <h2>E.T.</h2>
+                <p>Estreno: 1982</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/lalaland.jpg" alt=""></a>
+                <h2>La La Land</h2>
+                <p>Estreno: 2016</p>
+            </article>
+
+            <h1 class="titulo">PELÍCULAS POPULARES</h1>
+        <section class="portada-sec">
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/barbie.jpg" alt=""></a>
+                <h2>Barbie</h2>
+                <p>Estreno: 2023</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/malefica.jpg" alt=""></a>
+                <h2>Maléfica</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/oppenheimer.jpg" alt=""></a>
+                <h2>Oppenheimer</h2>
+                <p>Estreno: 2023</p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/star.jpg" alt=""></a>
+                <h2>A star is born</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/titanic.jpg" alt=""></a>
+                <h2>Titanic</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <h1 class="titulo">SERIES POPULARES</h1>
+        <section class="portada-sec">
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gilmore.jpg" alt=""></a>
+                <h2>Gilmore girls</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gossip.jpg" alt=""></a>
+                <h2>Gossip girl</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/howimet.jpg" alt=""></a>
+                <h2>How I met your mother</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/lcdp.jpg" alt=""></a>
+                <h2>La casa de papel</h2>
+                <p>Estreno: </p>
+            </article>
+
+            <article class="portada">
+                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/stranger.jpg" alt=""></a>
+                <h2>Stranger things</h2>
+                <p>Estreno: </p>
+            </article>
+
+        </section>
+
+        
     </main>
 
     <footer class="footer">
