detalle series, géneros y favicon

--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle de la película</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
 </head>
 <body>
 
@@ -17,15 +18,15 @@
         <div class="navbar">
             <ul class="ulnavbar">
                 <li class="navbar-text">
-                    <a class="navbar-items" href="./index.html">HOME</a>
-                    <a class="navbar-items" href="./index.html">GÉNEROS</a>
-                    <a class="navbar-items" href="./index.html">FAVORITOS</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">HOME</a>
+                    <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">FAVORITOS</a>
                 </li>
             </ul>
         </div>
 
     
-    <form class="contenedorPadre" action="./busqueda.html" method="get">
+    <form class="contenedorPadre" action="./detalle-pelicula.html" method="get">
     <div class="contenedor.input">
         <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
     </div>
@@ -39,17 +40,20 @@
 
     <main class="main">
 
-        <h1 class="titulo-detalle">Detalles de la película...</h1>
+        <h1 class="titulo-detalle">DETALLES DE LA PELÍCULA</h1>
         <section class="portada-sec-detalle">
             <article class="portada-detalle">
                 <h2 class="h2">Beauty and the Beast</h2>
-                <a href="busqueda.html" target="_blank"> <img class="portada-img-detalle" src="../pi-grupo1-trezeguet-scallan/img/detalles/detalle-bella.jpg" alt=""></a>
+                <a href="index.html" target="_blank"> <img class="portada-img-detalle" src="../pi-grupo1-trezeguet-scallan/img/detalles/detalle-bella.jpg" alt=""></a>
                 <iframe class="iframe" width="570" height="350" src="https://www.youtube.com/embed/e3Nl_TCQXuw?si=8KaZKhtDJOtldx3z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h3 class="h3">Rating:</h3>
-                <h3 class="h3">Duración: 2h 19min</h3>
-                <h3 class="h3">Sinopsis: </h3>
-                <p>Bella es una joven brillante e independiente que decide entregarse como prisionera a una despiadada bestia a cambio de que <br> esta libere a su padre. A pesar de sus temores, Bella se hace amiga del hechizado servicio del castillo, aprende a ver más allá <br> del espantoso físico de la Bestia y descubre que tiene el bondadoso corazón de un auténtico príncipe.</p>
-                <h3 class="h3">Género: Romántico</h3>
+                <h3 class="h3">Rating</h3>
+                <p class="p">(stars)</p>
+                <h3 class="h3">Duración</h3>
+                <p class="p">2h 19min</p>
+                <h3 class="h3">Sinopsis</h3>
+                <p class="p">Bella es una joven brillante e independiente que decide entregarse como prisionera a una despiadada bestia a cambio de que esta libere a su padre. A pesar de sus temores, Bella se hace amiga del hechizado servicio del castillo, aprende a ver más allá del espantoso físico de la Bestia y descubre que tiene el bondadoso corazón de un auténtico príncipe.</p>
+                <a href="" target="_blank" class="h3">Género</a>
+                <p class="p">Romántico</p>
             </article>
 
         </section>
