--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Integrador</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
 </head>
 <body>
 
@@ -18,14 +19,14 @@
             <ul class="ulnavbar">
                 <li class="navbar-text">
                     <a class="navbar-items" href="./index.html">HOME</a>
-                    <a class="navbar-items" href="./index.html">GÉNEROS</a>
-                    <a class="navbar-items" href="./index.html">FAVORITOS</a>
+                    <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">FAVORITOS</a>
                 </li>
             </ul>
         </div>
 
     
-    <form class="contenedorPadre" action="./busqueda.html" method="get">
+    <form class="contenedorPadre" action="./detalle-pelicula.html" method="get">
     <div class="contenedor.input">
         <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
     </div>
@@ -43,97 +44,97 @@
         <section class="portada-sec">
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/bellaybestia.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/bellaybestia.jpg" alt=""></a>
                 <h2>Beauty and the Beast</h2>
                 <p>Estreno: 2017</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/amigos.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/amigos.jpg" alt=""></a>
                 <h2>Friends with benefits</h2>
                 <p>Estreno: 2011</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/diezcosas.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/diezcosas.jpg" alt=""></a>
                 <h2>Ten things I hate about you</h2>
                 <p>Estreno: 1999</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/et.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/et.jpg" alt=""></a>
                 <h2>E.T.</h2>
                 <p>Estreno: 1982</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/lalaland.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/lo-mas-visto-en-peliculas/lalaland.jpg" alt=""></a>
                 <h2>La La Land</h2>
                 <p>Estreno: 2016</p>
             </article>
 
             <h1 class="titulo">PELÍCULAS POPULARES</h1>
-        <section class="portada-sec">
+            <section class="portada-sec">
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/barbie.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/barbie.jpg" alt=""></a>
                 <h2>Barbie</h2>
                 <p>Estreno: 2023</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/malefica.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/malefica.jpg" alt=""></a>
                 <h2>Maléfica</h2>
-                <p>Estreno: </p>
+                <p>Estreno: 2014</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/oppenheimer.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/oppenheimer.jpg" alt=""></a>
                 <h2>Oppenheimer</h2>
                 <p>Estreno: 2023</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/star.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/star.jpg" alt=""></a>
                 <h2>A star is born</h2>
-                <p>Estreno: </p>
+                <p>Estreno: 2018</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/titanic.jpg" alt=""></a>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/titanic.jpg" alt=""></a>
                 <h2>Titanic</h2>
-                <p>Estreno: </p>
+                <p>Estreno: 1998</p>
             </article>
 
             <h1 class="titulo">SERIES POPULARES</h1>
-        <section class="portada-sec">
+            <section class="portada-sec">
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gilmore.jpg" alt=""></a>
-                <h2>Gilmore girls</h2>
-                <p>Estreno: </p>
-            </article>
-
-            <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gossip.jpg" alt=""></a>
-                <h2>Gossip girl</h2>
-                <p>Estreno: </p>
-            </article>
-
-            <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/howimet.jpg" alt=""></a>
-                <h2>How I met your mother</h2>
-                <p>Estreno: </p>
-            </article>
-
-            <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/lcdp.jpg" alt=""></a>
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/lcdp.jpg" alt=""></a>
                 <h2>La casa de papel</h2>
-                <p>Estreno: </p>
+                <p>Estreno: 2017</p>
             </article>
 
             <article class="portada">
-                <a href="busqueda.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/stranger.jpg" alt=""></a>
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gossip.jpg" alt=""></a>
+                <h2>Gossip girl</h2>
+                <p>Estreno: 2007</p>
+            </article>
+
+            <article class="portada">
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gilmore.jpg" alt=""></a>
+                <h2>Gilmore girls</h2>
+                <p>Estreno: 2000</p>
+            </article>
+
+            <article class="portada">
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/howimet.jpg" alt=""></a>
+                <h2>How I met your mother</h2>
+                <p>Estreno: 2005</p>
+            </article>
+
+            <article class="portada">
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/stranger.jpg" alt=""></a>
                 <h2>Stranger things</h2>
-                <p>Estreno: </p>
+                <p>Estreno: 2016</p>
             </article>
 
         </section>
