--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -48,12 +48,10 @@
                 <iframe class="iframe" width="570" height="350" src="https://www.youtube.com/embed/3y-6iaveY6c?si=MAs3EgwZSl1h-C4n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
                 <h3 class="h3">Rating</h3>
                 <p class="p">(stars)</p>
-                <h3 class="h3">Duración</h3>
-                <p class="p">2h 19min</p>
                 <h3 class="h3">Sinopsis</h3>
-                <p class="p">Bella es una joven brillante e independiente que decide entregarse como prisionera a una despiadada bestia a cambio de que esta libere a su padre. A pesar de sus temores, Bella se hace amiga del hechizado servicio del castillo, aprende a ver más allá del espantoso físico de la Bestia y descubre que tiene el bondadoso corazón de un auténtico príncipe.</p>
-                <a href="" target="_blank" class="h3">Género</a>
-                <p class="p">Romántico</p>
+                <p class="p">Un misterioso hombre conocido como "El Profesor" ha pasado toda su vida planeando el mayor de los atracos de la historia: entrar en la Fábrica Nacional de Moneda y Timbre e imprimir 2400 millones de euros. Para llevar a cabo este ambicioso plan, el Profesor recluta a un equipo de ocho personas con ciertas habilidades y que no tienen nada que perder. Estos, junto al Profesor, planean cada paso del atraco durante cinco meses. Este equipo, con nombres de diferentes ciudades del mundo, requiere de 11 días de reclusión en la Fábrica, durante los cuales tiene que lidiar con las fuerzas de élite de la policía y 67 rehenes.</p>
+                <a href="generos.html" target="_blank" class="h3">Género</a>
+                <p class="p">Acción</p>
             </article>
 
         </section>
