--- a/favoritos.html
+++ b/favoritos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Géneros</title>
+    <title>Favoritos</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
 </head>
@@ -40,29 +40,8 @@
 
     <main class="main">
 
-        <h1 class="titulo">GÉNEROS DISPONIBLES</h1>
-
-        <h2 class="h2-generos">PELÍCULAS</h2>
-        <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Romance</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Infantil</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Comedia</li></a>
-
-        </ul>
-
-        <h2 class="h2-generos">SERIES</h2>
-        <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Drama</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Ciencia ficción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Comedia</li></a>
-
-        </ul>
-
-
+        <h1 class="titulo">MIS FAVORITOS</h1>
+        
     </main>
 
     <footer class="footer">
