--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="navbar-text">
                     <a class="navbar-items" href="./index.html">HOME</a>
                     <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
-                    <a class="navbar-items" href="./index.html" target="_blank">FAVORITOS</a>
+                    <a class="navbar-items" href="./favoritos.html" target="_blank">FAVORITOS</a>
                 </li>
             </ul>
         </div>
