--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -20,7 +20,7 @@
                 <li class="navbar-text">
                     <a class="navbar-items" href="./index.html" target="_blank">HOME</a>
                     <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
-                    <a class="navbar-items" href="./index.html" target="_blank">FAVORITOS</a>
+                    <a class="navbar-items" href="./favoritos.html" target="_blank">FAVORITOS</a>
                 </li>
             </ul>
         </div>
@@ -50,8 +50,8 @@
                 <p class="p">(stars)</p>
                 <h3 class="h3">Sinopsis</h3>
                 <p class="p">Un misterioso hombre conocido como "El Profesor" ha pasado toda su vida planeando el mayor de los atracos de la historia: entrar en la Fábrica Nacional de Moneda y Timbre e imprimir 2400 millones de euros. Para llevar a cabo este ambicioso plan, el Profesor recluta a un equipo de ocho personas con ciertas habilidades y que no tienen nada que perder. Estos, junto al Profesor, planean cada paso del atraco durante cinco meses. Este equipo, con nombres de diferentes ciudades del mundo, requiere de 11 días de reclusión en la Fábrica, durante los cuales tiene que lidiar con las fuerzas de élite de la policía y 67 rehenes.</p>
-                <a href="generos.html" target="_blank" class="h3">Género</a>
-                <p class="p">Acción</p>
+                <a href="generos.html" target="_blank" class="h3">Género</a><br><br>
+                <a href="detalle-accion.html" class="p">Acción</a><br><br>
             </article>
 
         </section>
