--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -6,6 +6,7 @@
     <title>Detalle de la serie</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
 
@@ -14,6 +15,7 @@
         <div class="logo-sec">
             <img class="logo-img" src="./img/LogoJC.png" alt="">
         </div>
+
 
         <div class="navbar">
             <ul class="ulnavbar">
@@ -47,7 +49,9 @@
                 <a href="index.html" target="_blank"> <img class="portada-img-detalle" src="../pi-grupo1-trezeguet-scallan/img/detalles/detalle-casa.jpg" alt=""></a>
                 <iframe class="iframe" width="570" height="350" src="https://www.youtube.com/embed/3y-6iaveY6c?si=MAs3EgwZSl1h-C4n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
                 <h3 class="h3">Rating</h3>
-                <p class="p">(stars)</p>
+                <i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star-half-stroke" style="color: #ffffff;"></i>
+                <h3 class="h3">Fecha de estreno</h3>
+                <p class="p">2017</p>
                 <h3 class="h3">Sinopsis</h3>
                 <p class="p">Un misterioso hombre conocido como "El Profesor" ha pasado toda su vida planeando el mayor de los atracos de la historia: entrar en la Fábrica Nacional de Moneda y Timbre e imprimir 2400 millones de euros. Para llevar a cabo este ambicioso plan, el Profesor recluta a un equipo de ocho personas con ciertas habilidades y que no tienen nada que perder. Estos, junto al Profesor, planean cada paso del atraco durante cinco meses. Este equipo, con nombres de diferentes ciudades del mundo, requiere de 11 días de reclusión en la Fábrica, durante los cuales tiene que lidiar con las fuerzas de élite de la policía y 67 rehenes.</p>
                 <a href="generos.html" target="_blank" class="h3">Género</a><br><br>
