--- a/generos.html
+++ b/generos.html
@@ -6,6 +6,9 @@
     <title>Géneros</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+
 </head>
 <body>
 
@@ -44,21 +47,21 @@
 
         <h2 class="h2-generos">PELÍCULAS</h2>
         <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Romance</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Infantil</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Comedia</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Romance</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Infantil</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
 
         </ul>
 
         <h2 class="h2-generos">SERIES</h2>
         <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Drama</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Ciencia ficción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li">Comedia</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Drama</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Ciencia ficción</li></a>
+            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
 
         </ul>
 
