--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -6,6 +6,8 @@
     <title>Detalle de la película</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="../pi-grupo1-trezeguet-scallan/img/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -47,7 +49,9 @@
                 <a href="index.html" target="_blank"> <img class="portada-img-detalle" src="../pi-grupo1-trezeguet-scallan/img/detalles/detalle-bella.jpg" alt=""></a>
                 <iframe class="iframe" width="570" height="350" src="https://www.youtube.com/embed/e3Nl_TCQXuw?si=8KaZKhtDJOtldx3z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h3 class="h3">Rating</h3>
-                <p class="p">(stars)</p>
+                <i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star" style="color: #ffffff;"></i><i class="fa-solid fa-star-half-stroke" style="color: #ffffff;"></i>
+                <h3 class="h3">Fecha de estreno</h3>
+                <p class="p">2017</p>
                 <h3 class="h3">Duración</h3>
                 <p class="p">2h 19min</p>
                 <h3 class="h3">Sinopsis</h3>
