html búsqueda y favoritos

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
 
     
-    <form class="contenedorPadre" action="./detalle-pelicula.html" method="get">
+    <form class="contenedorPadre" action="./search-results.html" method="get">
     <div class="contenedor.input">
         <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
-    </div>
+    </div> 
 
     <div class="contenedor.input">
         <button type="submit">Submit</button>
-    </div>
+    </div> 
     </form>
 
     </header>
