--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
     
-    <form class="contenedorPadre" action="./search-results.html" method="get">
+    <form class="contenedorPadre" action="./search-results.html" target="_blank" method="get">
     <div class="contenedor.input">
         <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
     </div> 
