--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     
     <form class="contenedorPadre" action="./search-results.html" target="_blank" method="get">
     <div class="contenedor.input">
-        <input type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
+        <input class="input" type="text" name="buscar" id="busqueda" placeholder="Buscar..." required>
     </div> 
 
     <div class="contenedor.input">
-        <button type="submit">Submit</button>
+        <button class="button" type="submit">Submit</button>
     </div> 
     </form>
 
