cambios en favoritos html

--- a/favoritos.html
+++ b/favoritos.html
@@ -42,24 +42,22 @@
     <main class="main">
 
         <h1 class="titulo">MIS FAVORITOS</h1>
-        <h2 class="h2-generos">Películas de acción</h2>
+        <h2 class="h2-generos">Películas</h2>
         <section class="portada-sec">
 
             <article class="portada">
                 <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/oppenheimer.jpg" alt=""></a>
                 <h2>Oppenheimer</h2>
-                <p>Estreno: 2023</p>
             </article>
 
         </section>
         
-        <h2 class="h2-generos">Series de acción</h2>
+        <h2 class="h2-generos">Series</h2>
         <section class="portada-sec">
 
             <article class="portada">
                 <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/lcdp.jpg" alt=""></a>
                 <h2>La casa de papel</h2>
-                <p>Estreno: 2017</p>
             </article>
 
         </section>
